--- a/DEMO/test-output/old/Suite/classes.html
+++ b/DEMO/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>DEMO</td>
+<td>Basic_Test_Scripts</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
